@@ -1,6 +1,8 @@
 source 'https://rubygems.org'
 ruby '2.3.1'
 gem 'rails', '~> 5.0.0', '>= 5.0.0.1'
+
+# Rails defaults
 gem 'puma', '~> 3.0'
 gem 'sass-rails', '~> 5.0'
 gem 'uglifier', '>= 1.3.0'
@@ -17,20 +19,21 @@ group :development do
   gem 'spring'
   gem 'spring-watcher-listen', '~> 2.0.0'
 end
-gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
-gem 'foundation-rails', '~> 5.5'
+
+# learn-rails
+gem 'bootstrap-sass'
 gem 'gibbon'
 gem 'high_voltage'
-gem 'sendgrid'
 gem 'simple_form'
 group :development do
   gem 'better_errors'
   gem 'rails_layout'
-end
-group :development, :test do
   gem 'sqlite3'
 end
 group :production do
   gem 'pg'
-  gem 'rails_12factor'
+end
+group :test do
+  gem 'minitest-spec-rails'
+  gem 'minitest-rails-capybara'
 end
