@@ -13,8 +13,5 @@
 //= require jquery
 //= require jquery_ujs
 //= require turbolinks
-//= require foundation
+//= require bootstrap-sprockets
 //= require_tree .
-$(function() {
-  $(document).foundation();
-});
