@@ -1,5 +1,13 @@
 <% content_for :title do %>About<% end %>
 <h3>About Foobar Kadigan</h3>
-<p>He was born in Waikikamukau, New Zealand. He left New Zealand for England, excelled at the University of Mopery, and served in the Royal Loamshire Regiment. While in service, he invented the kanuten valve used in the processing of unobtainium for industrial use. With a partner, Granda Fairbook, he founded Acme Manufacturing, later acquired by the Advent Corporation, to develop his discovery for use in the Turboencabulator. Mr. Kadigan is now retired and lives in Middlehampton with a favorite cat, where he raises Griadium frieda and collects metasyntactic variables.</p>
+<p>He was born in Waikikamukau, New Zealand. He left New Zealand for England,
+  excelled at the University of Mopery, and served in the Royal Loamshire Regiment.
+  While in service, he invented the kanuten valve used in the processing of
+  unobtainium for industrial use. With a partner, Granda Fairbook, he founded
+  Acme Manufacturing, later acquired by the Advent Corporation, to develop his
+  discovery for use in the Turboencabulator. Mr. Kadigan is now retired and
+  lives in Middlehampton with a favorite cat, where he raises Griadium frieda
+  and collects metasyntactic variables.</p>
 <p>His favorite quotation is:</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  tempor incididunt ut labore et dolore magna aliqua.</p>
