@@ -1,0 +1,17 @@
+require 'test_helper'
+
+# Feature: Home page
+#   As a visitor
+#   I want to visit a home page
+#   So I can learn more about the website
+feature 'Home page' do
+
+  # Scenario: Visit the home page
+  #   Given I am a visitor
+  #   When I visit the home page
+  #   Then I see "Welcome"
+  scenario 'visit the home page' do
+    visit root_path
+    page.must_have_content 'Stay in touch'
+  end
+end
